# gmaps-reviews-short-video

./: .env.example  .flaskenv  .gitignore  CNAME  CONTEXT.md  LICENSE  Procfile  README.md  TODOS.md  gmaps-web.service  index.html  llms.txt  pyproject.toml  remotion-sidecar.service
docs/adr/: 0001-node-sidecar-for-remotion.md  0002-python-staticmap-for-map-card.md  0003-place-cache-directory-and-image-management.md
mp3/: carnaval.txt  japan.txt  joyful.txt  stomp.txt
remotion-sidecar/: package-lock.json  package.json  server.mjs  tsconfig.json
remotion-sidecar/src/: Composition.tsx  index.tsx
remotion-sidecar/src/cards/: IntroCard.tsx  KenBurnsPhoto.tsx  MapCard.tsx  OutroCard.tsx  ReviewCard.tsx  ReviewHighlight.tsx  StarRating.tsx
scripts/: profile_video.py  rerender_gaya.py  setup-kokoro.sh  toulouse_mange_bien.sh
src/: batch_from_geojson.py  companion.py  geojson_to_youtube.py  gmaps.py  main.py  monte_alban_batch.py  publish.py  tts.py  video.py  youtube.py
src/web/: app.py  place_cache.py  tasks.py
src/web/routes/: gphotos_oauth.py  media.py  output.py  webhook.py  wizard.py  youtube_oauth.py
src/web/static/css/: app.css
src/web/templates/: base.html  output_index.html  step1_url.html  step1_wait.html  step2_select.html  step3_params.html  step4_preview.html  step4_wait.html  step5_publish.html  step5_wait.html
src/web/templates/fragments/: error_block.html  gphotos_albums.html  gphotos_media.html  gphotos_not_connected.html  loading_fetch.html  loading_generate.html  publish_loading.html  (+3 more)
tests/: test_gmaps.py  test_industry_vibe.py
(+1 files in other folders)
