[project]
name = "gmaps-reviews-short-video"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "moviepy>=2.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
]

[project.scripts]
gmaps-reviews-short-video = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
