[project]
name = "gmaps-reviews-short-video"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "moviepy>=2.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "qrcode[pil]>=7.0",
    "staticmap>=0.5",
    "flask>=3.0",
    "werkzeug>=3.0",
    "gunicorn>=23.0",
    "timezonefinder>=6.0",
    "honcho>=1.1",
]

[project.scripts]
gmaps-reviews-short-video = "src.main:main"
gmaps-publish = "src.publish:main"
gmaps-web = "src.web.app:run_prod"
gmaps-geojson-to-youtube = "src.geojson_to_youtube:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pyinstrument>=4.6",
]
